# FFmpegPlayer-Demo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/github/com/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: av_play.cpp  github_com_ffmpegplayer_util_VideoUtil.h  player_queue.cpp  stone_ffmpeg_play.cpp
app/src/main/cpp/include/: log.h  player_queue.h
app/src/main/java/github/com/ffmpegplayer/: MainActivity.java  VedioSurface01.java  VedioView.java
app/src/main/java/github/com/ffmpegplayer/util/: VideoUtil.java
app/src/main/res/layout/: activity_main.xml  activity_play.xml
app/src/test/java/github/com/ffmpegplayer/: ExampleUnitTest.java
live-demo/: CMakeLists.txt  build.gradle
live-demo/src/main/: AndroidManifest.xml
live-demo/src/main/cpp/: github_com_ffmpegplayer_demo_jni_PushNative.h  mylive.cpp  queue.cpp
live-demo/src/main/cpp/include/: queue.h
live-demo/src/main/cpp/include/x264/: x264.h
live-demo/src/main/java/github/com/ffmpegplayer_demo/: MainActivity.java
live-demo/src/main/java/github/com/ffmpegplayer_demo/jni/: PushNative.java
live-demo/src/main/java/github/com/ffmpegplayer_demo/params/: AudioParams.java  VideoParams.java
live-demo/src/main/java/github/com/ffmpegplayer_demo/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
live-demo/src/main/res/layout/: activity_main.xml
live-demo/src/main/res/values/: strings.xml
live-demo/src/test/java/github/com/ffmpegplayer_demo/: ExampleUnitTest.java
thread-demo/: CMakeLists.txt  build.gradle
thread-demo/src/androidTest/java/github/com/ffmpegplayer_demo/: ExampleInstrumentedTest.java
thread-demo/src/main/: AndroidManifest.xml
thread-demo/src/main/cpp/: github_com_ffmpegplayer_demo_PosixThread.h  posix_pthread.cpp
thread-demo/src/main/java/github/com/ffmpegplayer_demo/: MainActivity.java  PosixThread.java
thread-demo/src/main/java/github/com/util/: UUIDUtil.java
thread-demo/src/main/res/layout/: activity_main.xml
